Seccion NoviaBasicos y se agrego Redux

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'global/reset.scss';
+@import 'global/forms.scss';
 @import 'utilities/variables.scss';
 @import 'utilities/mixins.scss';
 @import 'novia/novia.scss';
