--- a/src/styles/global/forms.scss
+++ b/src/styles/global/forms.scss
@@ -1,21 +1,21 @@
-.GlobalForm{
+.GlobalForm {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    
-    &-pregunta{
+}
+    .GlobalForm-pregunta{
         width: 100%;
         display: flex;
         flex-direction: column;
         margin-top: 1.5rem;
     }
-    &-label{
+    .GlobalForm-label{
         display: flex;
         align-items: center;
     }
-    &-icono{
+    .GlobalForm-icono{
         width: 20px;
         height: 20px;
         margin-left: 5px;
@@ -23,13 +23,13 @@
             width: 20px;
         }
     }
-    &-input{
+    .GlobalForm-input{
         width: 280px;
         height: 40px;
         border: 2px solid #AAAAAA;
         border-radius: 5px;
     }
-    &-button{
+    .GlobalForm-button{
         width: 150px;
         height: 40px;
         background-color: #DC7C0B;
@@ -37,4 +37,3 @@
         color: #fff;
         margin-top: 1.5rem;
     }
-}
