--- a/src/styles/novia/novia.scss
+++ b/src/styles/novia/novia.scss
@@ -1,10 +1,11 @@
-.Novia{
+.Novia {
     display: flex;
     flex-direction: column;
     width: 100%;
 
     height: 100%;
-    &-header{
+}
+    .Novia-header {
         display: flex;
         justify-content: center;
         width: 100%;
@@ -17,21 +18,22 @@
             max-width: 100%;
         }
     }
-    &-nav{
+    .Novia-nav {
         width: 80%;
         display: flex;
         justify-content:space-between;
         align-items: center;
         padding: 1rem;
     }
-    &-title{
+
+    .Novia-title {
         color: #fff;
     }
 
-    &-container{
+    .Novia-container {
         display: flex;
     }
-    &-menu{
+    .Novia-menu {
         position:fixed;
         top:90px;
         left: 0px;
@@ -44,11 +46,11 @@
         -moz-box-shadow: 14px 14px 23px -11px rgba(0,0,0,0.53);
         box-shadow: 14px 14px 23px -11px rgba(0,0,0,0.53);
     }
-    &-menuActive{
+    .Novia-menuActive {
         width:200px;
         transition: all 0.3s ease-in-out;
     }
-    &-ul{
+    .Novia-ul {
         width: 100%;
         height: 500px;
         display: flex;
@@ -60,7 +62,7 @@
         margin: 0;
         margin-top: 20px;
     }
-    &-li{
+    .Novia-li {
         width: 80%;
         height: 200px;
         list-style-type: none;
@@ -83,15 +85,12 @@
             text-decoration: none;
             color: #908C8C;
         }
-      
-       
-        
-        
+
     }
-    &-iconMenu{
+    .Novia-iconMenu {
         cursor: pointer;
     }
-    &-main{
+    .Novia-main {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -99,7 +98,7 @@
         margin-top: 95px;
     }
 
-    &-cards{
+    .Novia-cards {
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -109,7 +108,7 @@
         gap: 20px;
         margin:  2rem 0;
     }
-    &-card{
+    .Novia-card {
         width: 270px;
         background-color: #fff;
         border-radius: 5px;
@@ -118,29 +117,29 @@
         align-items: center;
         padding: 1rem;
     }
-    &-h3{
+    .Novia-h3 {
         font-size: 40px;
         text-align: center;
         margin: 0;
     }
-    &-h4{
+    .Novia-h4 {
         font-size: 18px; 
         text-align: center;
         margin: 0;
     }
-    &-cardTextO{
+    .Novia-cardTextO {
         color: #DC7C0B;
         text-align: center;
     }
-    &-cardTextG{
+    .Novia-cardTextG {
         color: #3EA40E;
         text-align: center;
     }
-    &-cardTextR{
+    .Novia-cardTextR {
         color: #DC0B0B;
         text-align: center;
     }
-    &-items{
+    .Novia-items {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -149,7 +148,7 @@
         width: 100%;
         gap: 20px;
     }
-    &-item{
+    .Novia-item {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -162,42 +161,42 @@
             margin: 0;
         }
     }
-    &-itemText{
+    .Novia-itemText {
         width: 100%;
         display: flex;
         justify-content: space-between;
         margin-bottom: 5px;
     }
-    &-barra{
+    .Novia-barra {
         width: 270px;
         height: 8px;
         background-color: #D9D9D9;
         border-radius: 5px;
     }
-    &-barraPorcentaje{
+    .Novia-barraPorcentaje {
         width: 200px;
         height: 8px;
         background-color: #FDC878;
         border-radius: 5px;
     }
-    &-barraComplete{
+    .Novia-barraComplete {
         width: 270px;
         height: 8px;
         background-color: #A6F1B6;
         border-radius: 5px;
     }
-    &-check{
+    .Novia-check {
         width: 20px;
         height: 20px;
         border-radius: 50%;
         background-color: #D9D9D9;
     }
-    &-respuestas{
+    .Novia-respuestas {
         width: 100%;
         text-align: center;
     }
 
-}
+
 
 @include breakpoint('medium-simple') {
     .Novia{
