--- a/src/styles/global/forms.scss
+++ b/src/styles/global/forms.scss
@@ -6,14 +6,17 @@
     align-items: center;
 }
     .GlobalForm-pregunta{
-        width: 100%;
+        width: 90%;
         display: flex;
         flex-direction: column;
+        align-items: baseline;
         margin-top: 1.5rem;
     }
     .GlobalForm-label{
         display: flex;
         align-items: center;
+        text-align: left;
+        align-self: flex-start;
     }
     .GlobalForm-icono{
         width: 20px;
@@ -36,4 +39,34 @@
         border: none;
         color: #fff;
         margin-top: 1.5rem;
+    }
+
+    @include breakpoint('medium-simple') {
+        .GlobalForm {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem;
+        }
+        .GlobalForm-pregunta{
+            width: 300px;
+            align-items: center;
+
+        }
+        .GlobalForm-label{
+            display: flex;
+            align-items: center;
+            text-align: left;
+            align-self: flex-start;
+        }
+    }
+    
+    @include breakpoint('medium') {
+    
+    }
+    
+    @include breakpoint('medium-tablet') {
+        
     }
